manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app.kubernetes.io/name: webapp-service
spec:
  selector:
    app.kubernetes.io/name: webapp
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
