manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app.kubernetes.io/name: webapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: "mahinraza.site"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webapp-service
            port:
              number: 80
